# kirho

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
cmake/: kirhoConfig.cmake
docs/: Doxyfile  main.dox
docs/html/: annotated.html  classes.html  concepts.html  dir_0ea8b0ba15a4769a751b8a623da71847.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_6b3a6bd66f4050ea5cb06a87acd7f2a3.html  dir_9838d0216eeba45f9f379f53bdc3258e.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  globals.html  globals_defs.html  index.html  menudata.js  pages.html
docs/html/d0/d30/: md_README.html
docs/html/d0/d74/: conceptkirho_1_1printable__t.html
docs/html/d2/d25/: conceptkirho_1_1printable.html
docs/html/d3/d2a/: structkirho_1_1defer-members.html
docs/html/d4/d1a/: conceptkirho_1_1error__handler__t.html
docs/html/d4/df5/: kirho_8hpp.html  kirho_8hpp_source.html
docs/html/d6/d71/: structkirho_1_1empty__t.html
docs/html/d6/dac/: structkirho_1_1defer.html
docs/html/d9/d16/: classkirho_1_1result__t.html
docs/html/d9/d5f/: conceptkirho_1_1deferable__t.html
docs/html/d9/dc5/: structkirho_1_1defer__t.html
docs/html/db/d4a/: conceptkirho_1_1error__handler.html
docs/html/dc/d50/: structkirho_1_1empty.html
docs/html/de/d40/: structkirho_1_1defer__t-members.html
docs/html/df/d29/: classkirho_1_1result__t-members.html
docs/html/df/d9f/: conceptkirho_1_1deferable.html
docs/html/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_6.js  classes_0.js  classes_1.js  classes_2.js  concepts_0.js  defines_0.js  files_0.js  functions_0.js  functions_2.js  functions_5.js  functions_6.js  functions_7.js  searchdata.js
docs/latex/: annotated.tex  concepts.tex  files.tex  refman.tex
docs/latex/d0/d30/: md_README.tex
docs/latex/d0/d74/: conceptkirho_1_1printable__t.tex
docs/latex/d2/d25/: conceptkirho_1_1printable.tex
docs/latex/d4/d1a/: conceptkirho_1_1error__handler__t.tex
docs/latex/d4/df5/: kirho_8hpp.tex  kirho_8hpp_source.tex
docs/latex/d6/d71/: structkirho_1_1empty__t.tex
docs/latex/d6/dac/: structkirho_1_1defer.tex
docs/latex/d9/d16/: classkirho_1_1result__t.tex
docs/latex/d9/d5f/: conceptkirho_1_1deferable__t.tex
docs/latex/d9/dc5/: structkirho_1_1defer__t.tex
docs/latex/db/d4a/: conceptkirho_1_1error__handler.tex
docs/latex/dc/d50/: structkirho_1_1empty.tex
docs/latex/df/d9f/: conceptkirho_1_1deferable.tex
include/kirho/: kirho.hpp
src/: CMakeLists.txt  dummy.cpp
tests/: CMakeLists.txt  basic.cpp  error-handler.cpp  result.cpp
